# snkrs-news-bot

./: .env.sample  .gitignore  Makefile  README.md  pyproject.toml
database/: stock.csv  timeline.csv
src/: argument_parser.py  config.py  crawler.py  logger.py  main.py  message.py  slack_bot.py  utils.py
tests/: test_snkrs_news_bot.py  test_utils.py
